--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.1",
+    "@ant-design/icons": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.10.2",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
@@ -21,6 +22,7 @@
     "react-toastify": "^9.1.1",
     "react-use-cart": "^1.13.0",
     "reactjs-popup": "^2.0.5",
+    "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
