--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@auth0/auth0-react": "^2.2.3",
+    "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,11 +22,13 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.0.5",
     "react-toastify": "^9.1.1",
     "react-use-cart": "^1.13.0",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
