--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "antd": "^5.10.2",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^12.23.7",
+    "lucide-react": "^0.525.0",
     "react": "^18.2.0",
-    "react-animate-on-scroll": "^2.1.5",
     "react-auto-image-slider": "^1.0.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -56,6 +57,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.2"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
